--- a/template.tex
+++ b/template.tex
@@ -5,65 +5,43 @@
 % Your comments and suggestions are more than welcome; please email
 % them to cus@reed.edu
 %
-% See http://web.reed.edu/cis/help/latex.html for help. There are a
-% great bunch of help pages there, with notes on
-% getting started, bibtex, etc. Go there and read it if you're not
-% already familiar with LaTeX.
-%
-% Any line that starts with a percent symbol is a comment.
-% They won't show up in the document, and are useful for notes
-% to yourself and explaining commands.
-% Commenting also removes a line from the document;
-% very handy for troubleshooting problems. -BTS
 
-% As far as I know, this follows the requirements laid out in
-% the 2002-2003 Senior Handbook. Ask a librarian to check the
-% document before binding. -SN
-
-%%
-%% Preamble
-%%
 % \documentclass{<something>} must begin each LaTeX document
-\documentclass[11pt,singlespacinge,twoside]{reedthesis} %,headseplin
-% Packages are extensions to the basic LaTeX functions. Whatever you
-% want to typeset, there is probably a package out there for it.
-% Chemistry (chemtex), screenplays, you name it.
-% Check out CTAN to see: http://www.ctan.org/
-%%
-\usepackage{flipbook}
+\documentclass[10pt, b5paper, singlespacinge, twoside]{reedthesis} %,headseplin
+
+\usepackage{flipbook} % to create the flipbook
 \usepackage{pdfpages}
 \usepackage{pgf}
-\usepackage{graphicx,latexsym}
+\usepackage{graphicx, latexsym}
 \usepackage{lastpage}
 \usepackage{amsmath}
-\usepackage{amssymb,amsthm}
-\usepackage{longtable,booktabs,setspace}
+\usepackage{amssymb, amsthm}
+\usepackage{longtable, booktabs, setspace}
 \usepackage{chemarr} %% Useful for one reaction arrow, useless if you're not a chem major
 \usepackage[hyphens]{url}
-% Added by CII
 \usepackage{hyperref}
 \usepackage{lmodern}
 \usepackage{float}
-%\floatplacement{figure}{H}
-% End of CII addition
 \usepackage{rotating}
 \usepackage{enumitem}
-\usepackage{tcolorbox}
-\usepackage{hyperref}
+\usepackage{tcolorbox} % text boxes
+\usepackage{fancyhdr} % flipbook stuff
+%\usepackage{fancy} % footer / header margins
+\usepackage{pgf} % flipbook stuff
+\usepackage{blindtext} % alternate chapter / section in header
+\usepackage[font=small,labelfont=bf]{caption} % figure caption options
+
+% geometry
+%\usepackage[pass]{geometry}
+\usepackage[footskip=10mm+8pt]{geometry} % fix papersize geometry
+\renewcommand{\footruleskip}{10mm}
+
+% footer
+\usepackage[bottom]{footmisc} % fix footer position https://mirror.hmc.edu/ctan/macros/latex/contrib/footmisc/footmisc.pdf
 
 %\setlist{leftmargin=0.6em, topsep=-0.5mm, itemsep=-0.3em}
 
-% Next line commented out by CII
-%%% \usepackage{natbib}
-% Comment out the natbib line above and uncomment the following two lines to use the new
-% biblatex-chicago style, for Chicago A. Also make some changes at the end where the
-% bibliography is included.
-%\usepackage{biblatex-chicago}
-%\bibliography{thesis}
-
-
-% Added by CII (Thanks, Hadley!)
-% Use ref for internal links
+% Added by CII (Thanks, Hadley!), use ref for internal links
 %\renewcommand{\hyperref}[2][???]{\autoref{#1}}
 \def\chapterautorefname{Chapter}
 \def\sectionautorefname{Section}
@@ -72,7 +50,7 @@
 
 % Added by CII
 \usepackage{caption}
-\captionsetup{width=5in}
+\captionsetup{width = 5in}
 % End of CII addition
 % \usepackage{times} % other fonts are available like times, bookman, charter, palatino
 % Syntax highlighting #22
@@ -80,34 +58,21 @@ $if(highlighting-macros)$
   $highlighting-macros$
 $endif$
 
-% To pass between YAML and LaTeX the dollar signs are added by CII
+% To pass between YAML and LaTeX, use dollar signs
 \title{$title$}
 \author{$author$}
-% The month and year that you submit your FINAL draft TO THE LIBRARY (May or December)
 \date{$date$}
 \division{$division$}
 \advisor{$advisor$}
 \institution{$institution$}
 \degree{$degree$}
-%If you have two advisors for some reason, you can use the following
-% Uncommented out by CII
 $if(altadvisor)$
-\altadvisor{$altadvisor$}
+  \altadvisor{$altadvisor$}
 $endif$
-% End of CII addition
-
-%%% Remember to use the correct department!
 \department{$department$}
-% if you're writing a thesis in an interdisciplinary major,
-% uncomment the line below and change the text as appropriate.
-% check the Senior Handbook if unsure.
-%\thedivisionof{The Established Interdisciplinary Committee for}
-% if you want the approval page to say "Approved for the Committee",
-% uncomment the next line
-%\approvedforthe{Committee}
 
 % Added by CII
-%%% Copied from knitr
+%% Copied from knitr
 %% maxwidth is the original width if it's less than linewidth
 %% otherwise use linewidth (to make sure the graphics do not exceed the margin)
 \makeatletter
@@ -119,7 +84,6 @@ $endif$
   \fi
 }
 \makeatother
-
 \renewcommand{\contentsname}{Table of Contents}
 % End of CII addition
 
@@ -141,22 +105,67 @@ $for(header-includes)$
 $endfor$
 % End of CII addition
 
+% link coloring & url style
+
 \hypersetup{
-colorlinks=true,
-citecolor=blue,
-linkcolor=blue,
-anchorcolor=blue,
-filecolor=blue,      
-urlcolor=blue,
-bookmarks=true,
-linktocpage=true
+  colorlinks = true,
+  citecolor = black,
+  linkcolor = black,
+  anchorcolor = black,
+  filecolor = black,      
+  urlcolor = black,
+  bookmarks = true,
+  linktocpage = true
 }
+
+% eletronic pdf
+%\hypersetup{
+%  colorlinks = true,
+%  citecolor = blue,
+%  linkcolor = blue,
+%  anchorcolor = blue,
+%  filecolor = blue,      
+% urlcolor = blue,
+%  bookmarks = true,
+%  linktocpage = true
+%}
 
 \urlstyle{same}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% required addition for csl references
+% found at https://github.com/mpark/wg21/issues/54#issuecomment-764026431
+
+$if(csl-refs)$
+  \newlength{\cslhangindent}
+  \setlength{\cslhangindent}{.5in}
+  \newlength{\csllabelwidth}
+  \setlength{\csllabelwidth}{.2in}
+  \setlength{\parindent}{0pt}
+  \setlength{\oddsidemargin}{.2in}
+  \setlength{\evensidemargin}{.2in}
+  \setlength{\textwidth}{4.5in}
+  \setlength{\textheight}{7.2in} 
+  \newenvironment{CSLReferences}[3] % #1 hanging-ident, #2 entry spacing
+  {% don't indent paragraphs
+    \setlength{\parindent}{0pt}
+    % turn on hanging indent if param 1 is 1
+    \ifodd #1 \everypar{\setlength{\hangindent}{\cslhangindent}}\ignorespaces\fi
+    % set entry spacing
+    \ifnum #2 > 0
+    \setlength{\parskip}{#2\baselineskip}
+    \fi
+  }%
+  {}
+  \usepackage{calc} % for \widthof, \maxof
+  \newcommand{\CSLBlock}[1]{#1\hfill\break}
+  \newcommand{\CSLLeftMargin}[1]{\parbox[t]{\maxof{\widthof{#1}}{\csllabelwidth}}{#1}}
+  \newcommand{\CSLRightInline}[1]{\parbox[t]{\linewidth}{#1}}
+  \newcommand{\CSLIndent}[1]{\hspace{\cslhangindent}#1}
+$endif$
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%% Begin Document %%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{document}
 
@@ -167,12 +176,8 @@ $if(title)$
 $endif$
 
 \frontmatter
-\pagenumbering{roman}
-%\frontmatter % this stuff will be roman-numbered
+\pagenumbering{roman} % this stuff will be roman-numbered
 \pagestyle{empty} % this removes page numbers from the frontmatter
-
-%\mainmatter % here the regular arabic numbering starts
-%\pagestyle{fancyplain} % turns page numbering back on
 
 $if(toc)$
   %\hypersetup{linkcolor=$if(toccolor)$$toccolor$$else$black$endif$}
@@ -199,11 +204,11 @@ $if(abstract)$
   \end{abstract}
 $endif$
 
-\mainmatter % here the regular arabic numbering starts
-\pagenumbering{arabic} % Make sure a page numbering scheme is explicitly set at the beginning.
-\pagestyle{fancyplain} % turns page numbering back on
+\mainmatter 
+% here the regular arabic numbering starts
+% Make sure a page numbering scheme is explicitly set at the beginning of Chap 1 (see Chap 1)
+% \pagestyle{fancyplain} turns page numbering back on
 
 $body$
 
 \end{document}
-
